# pinky

./: CMakeLists.txt  ReadMe.md
src/: main.cxx
src/epaper/: epaper_ifc.h
